# stretchplayer

./: .gitignore  AUTHORS  BUGS.txt  CMakeLists.txt  run_cmake.sh  stretchplayer.conf  test_with_pipes.sh
src/: AlsaAudioSystem.cpp  AlsaAudioSystem.hpp  AlsaAudioSystemPrivate.hpp  AudioSystem.cpp  AudioSystem.hpp  CMakeLists.txt  Configuration.cpp  Configuration.hpp  Engine.cpp  Engine.hpp  FakeAudioSystem.cpp  FakeAudioSystem.hpp  JackAudioSystem.cpp  JackAudioSystem.hpp  PipesConf.hpp  PipesConfParser.cpp  PipesConfParser.hpp  PlayerWidget.hpp  RingBuffer.hpp  RubberBandServer.cpp  RubberBandServer.hpp  bams_format.c  bams_format.h  config.js  configJsonParser.js  configuration2.cpp  configuration2.h  generate_config.js  jack_memops.c  jack_memops.h  main.cpp
src/WAVE/: WAVE.cpp  WAVE.h  rifffile.cpp  rifffile.h  taken_from
src/WAVE/WavCat/: RIFFFile.cpp  RIFFFile.h  RIFFFile.txt
src/WAVE/WaveTest/: A440.bpr  A440.cpp  Regress.bat  Reverb.bpr  Reverb.cpp  WAVETEST.mak  WaveTest.bpg  WaveTest.bpr  WaveTest.cpp  WaveTest.dsk  WaveTest.dsp  WaveTest.dsw
src/_old/: Marquee.cpp  Marquee.hpp  PlayerWidget.cpp
